// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChartDonutThreshold 1`] = `
<DocumentFragment>
  <div
    class="pf-c-chart"
    style="pointer-events: none; position: relative; width: 100%; height: 100%;"
  >
    <svg
      height="230"
      role="img"
      style="pointer-events: all; width: 100%; height: 100%;"
      viewBox="0 0 230 230"
      width="230"
    >
      <g>
        <path
          d="M5.8170722959499274e-15,-95L5.2659812363336185e-15,-86Z"
          role="presentation"
          shape-rendering="auto"
          style="fill: var(--pf-chart-donut--threshold--first--Color, #f0f0f0); padding: 8px; stroke: var(--pf-chart-pie--data--stroke--Color, transparent); stroke-width: 1;"
          transform="translate(115, 115)"
        />
      </g>
    </svg>
    <div
      style="z-index: 99; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
    >
      <svg
        height="230"
        style="overflow: visible; width: 100%; height: 100%;"
        viewBox="0 0 230 230"
        width="230"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`ChartDonutThreshold 2`] = `
<DocumentFragment>
  <div
    class="pf-c-chart"
    style="pointer-events: none; position: relative; width: 100%; height: 100%;"
  >
    <svg
      height="230"
      role="img"
      style="pointer-events: all; width: 100%; height: 100%;"
      viewBox="0 0 230 230"
      width="230"
    >
      <g>
        <path
          d="M5.8170722959499274e-15,-95L5.2659812363336185e-15,-86Z"
          role="presentation"
          shape-rendering="auto"
          style="fill: var(--pf-chart-donut--threshold--first--Color, #f0f0f0); padding: 8px; stroke: var(--pf-chart-pie--data--stroke--Color, transparent); stroke-width: 1;"
          transform="translate(115, 115)"
        />
      </g>
    </svg>
    <div
      style="z-index: 99; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
    >
      <svg
        height="230"
        style="overflow: visible; width: 100%; height: 100%;"
        viewBox="0 0 230 230"
        width="230"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders component data 1`] = `
<DocumentFragment>
  <div
    class="pf-c-chart"
    style="pointer-events: none; position: relative; width: 100%; height: 100%;"
  >
    <svg
      height="200"
      role="img"
      style="pointer-events: all; width: 100%; height: 100%;"
      viewBox="0 0 200 200"
      width="200"
    >
      <g>
        <path
          d="M0.9334130156923648,-79.99455444055012A80,80,0,0,1,46.26447237139683,-65.26560040477877L40.97399932998254,-57.983888959835994A71,71,0,0,0,0.9334130156923663,-70.99386410206263Z"
          role="presentation"
          shape-rendering="auto"
          style="fill: var(--pf-chart-donut--threshold--first--Color, #f0f0f0); padding: 8px; stroke: var(--pf-chart-pie--data--stroke--Color, transparent); stroke-width: 1;"
          transform="translate(100, 100)"
        />
        <path
          d="M47.77476635632862,-64.16830759493513A80,80,0,0,1,65.26560040477878,46.26447237139683L57.983888959835994,40.97399932998254A71,71,0,0,0,42.484293314914325,-56.886596149992364Z"
          role="presentation"
          shape-rendering="auto"
          style="fill: var(--pf-chart-donut--threshold--second--Color, #d2d2d2); padding: 8px; stroke: var(--pf-chart-pie--data--stroke--Color, transparent); stroke-width: 1;"
          transform="translate(100, 100)"
        />
        <path
          d="M64.16830759493514,47.77476635632862A80,80,0,0,1,-23.831948248612967,76.36778275343231L-21.050581972913932,67.80761755585895A71,71,0,0,0,56.88659614999237,42.48429331491432Z"
          role="presentation"
          shape-rendering="auto"
          style="fill: var(--pf-chart-donut--threshold--third--Color, #b8bbbe); padding: 8px; stroke: var(--pf-chart-pie--data--stroke--Color, transparent); stroke-width: 1;"
          transform="translate(100, 100)"
        />
        <path
          d="M-25.607405310550824,75.7909017841929A80,80,0,0,1,-0.9334130156924101,-79.99455444055012L-0.9334130156923751,-70.99386410206263A71,71,0,0,0,-22.826039034851792,67.23073658661953Z"
          role="presentation"
          shape-rendering="auto"
          style="fill: var(--pf-chart-theme--blue--ColorScale--400, #519de9); padding: 8px; stroke: var(--pf-chart-pie--data--stroke--Color, transparent); stroke-width: 1;"
          transform="translate(100, 100)"
        />
      </g>
    </svg>
    <div
      style="z-index: 99; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
    >
      <svg
        height="200"
        style="overflow: visible; width: 100%; height: 100%;"
        viewBox="0 0 200 200"
        width="200"
      />
    </div>
  </div>
</DocumentFragment>
`;
